other/e-l/kubernetes-version-check/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: kubernetes-version-check
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../kubernetes-version-check.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
  - name: step-03
    try:
    - script:
        content: |
          version=$(kubectl get secret kversion-secret -n kubversion-ns -o=jsonpath='{.metadata.labels.apiminorversion}')
          result=$(kubectl version -o json | kyverno jp query "serverVersion.minor == '${version}'" | tail -n 1)
          if [ "$result" = "false" ]; then exit 1; else exit 0; fi
